# edge-learner

./: LICENSE.md  README.md  package.json  pyproject.toml  tick.py
docs/: bower.json  package-lock.json
ui/: index.html
ui/assets/css/: chart.css
