[tool.poetry]
name = "edge-learner"
version = "0.0.1"
description = "Learn the market."
authors = ["TheDoctorAI <49969231+TheDoctorAI@users.noreply.github.com>"]
license = "NPOSL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
ccxt = "^1.39.37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
